force-app/main/default/objects/tc9_3bint__B3_Integration_Settings__c/tc9_3bint__B3_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>3B Integration Settings</label>
</CustomObject>