force-app/main/default/objects/tc9_3bint__B3_Integration_Settings__c/fields/tc9_3bint__Assignment_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Assignment_Record_Type_ID__c</fullName>
    <description>Allows a Record Type to be defined for the creation of Assignments from the Batch Size Shift Assignment job.
When left blank the default will be &quot;Temp&quot;.</description>
    <label>Assignment Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>