force-app/main/default/objects/tc9_3bint__B3_Integration_Settings__c/fields/tc9_3bint__Batch_Size_Shift_Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Batch_Size_Shift_Timesheet_Entry__c</fullName>
    <description>Allows the Apex batch size to be adjusted for the job Shift Timesheet Entry. The batch size defines how many Shifts will be processed per batch. When left blank the batch size of 200 will be used.</description>
    <label>Batch Size Shift Timesheet Entry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>